--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <div class="box">A</div>
+    <div class="box box-one">A</div>
     <div class="box">B</div>
     <div class="box">C</div>
-    <div class="box">D</div>
+    <div class="box box-four">D</div>
   </div>
 </body>
 </html>
